test/chainsaw/authpolicy/overlapping_authrules/authpolicy.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  ignoreAuthRules:
    - paths:
        - /api/public*
    - paths:
        - /public*
  authRules:
    - paths:
        - /api/{*}/secure/{**}
      methods:
        - POST
      when:
        - claim: role
          values:
            - entraid_role
    - paths:
        - /api/*
      methods:
        - POST
        - GET
      when:
        - claim: role
          values:
            - entra_user_role
  audience:
    - entraid_server
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
