test/chainsaw/authpolicy/overlapping_authrules/authpolicy-assert.yaml
# RequestAuthentication
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: auth-policy
spec:
  jwtRules:
    - audiences:
        - entraid_server
      forwardOriginalToken: true
      issuer: http://mock-oauth2.auth:8080/entraid
      jwksUri: http://mock-oauth2.auth:8080/entraid/jwks
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (deny-auth-rules)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-deny-auth-rules
spec:
  action: DENY
  rules:
    - to:
        - operation:
            methods:
              - POST
            paths:
              - /api/{*}/secure/{**}
      when:
        - key: request.auth.claims[iss]
          notValues:
            - http://mock-oauth2.auth:8080/entraid
    - to:
        - operation:
            methods:
              - POST
            paths:
              - /api/{*}/secure/{**}
      when:
        - key: request.auth.claims[aud]
          notValues:
            - entraid_server
    - to:
        - operation:
            methods:
              - POST
            paths:
              - /api/{*}/secure/{**}
      when:
        - key: request.auth.claims[role]
          notValues:
            - entraid_role
    - to:
        - operation:
            methods:
              - POST
              - GET
            paths:
              - /api/*
      when:
        - key: request.auth.claims[iss]
          notValues:
            - http://mock-oauth2.auth:8080/entraid
    - to:
        - operation:
            methods:
              - POST
              - GET
            paths:
              - /api/*
      when:
        - key: request.auth.claims[aud]
          notValues:
            - entraid_server
    - to:
        - operation:
            methods:
              - POST
              - GET
            paths:
              - /api/*
      when:
        - key: request.auth.claims[role]
          notValues:
            - entra_user_role
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (ignore-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-ignore-auth
spec:
  rules:
    - to:
        - operation:
            paths:
              - /api/public*
        - operation:
            paths:
              - /public*
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (require-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-require-auth
spec:
  rules:
    - to:
        - operation:
            notMethods:
              - POST
            paths:
              - /api/{*}/secure/{**}
        - operation:
            notMethods:
              - POST
              - GET
            paths:
              - /api/*
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /api/public*
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /public*
        - operation:
            notPaths:
              - /api/{*}/secure/{**}
              - /api/*
              - /api/public*
              - /public*
            paths:
              - '*'
      when:
        - key: request.auth.claims[iss]
          values:
            - http://mock-oauth2.auth:8080/entraid
        - key: request.auth.claims[aud]
          values:
            - entraid_server
    - to:
        - operation:
            methods:
              - POST
            paths:
              - /api/{*}/secure/{**}
      when:
        - key: request.auth.claims[iss]
          values:
            - http://mock-oauth2.auth:8080/entraid
        - key: request.auth.claims[aud]
          values:
            - entraid_server
        - key: request.auth.claims[role]
          values:
            - entraid_role
    - to:
        - operation:
            methods:
              - POST
              - GET
            paths:
              - /api/*
      when:
        - key: request.auth.claims[iss]
          values:
            - http://mock-oauth2.auth:8080/entraid
        - key: request.auth.claims[aud]
          values:
            - entraid_server
        - key: request.auth.claims[role]
          values:
            - entra_user_role
  selector:
    matchLabels:
      app: application
---
